                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 25-08-2005 changed: optimized scolling text rendering, the rss-control was drawing the entire feedinfo while only a small part is visible.
 - 25-08-2005 added: [ 1237903 ] Use custom thumbnails for shares - (with minor modification)
 - 25-08-2005 fixed: slideshow image duration
 - 24-08-2005 fixed: infrequent tearing on top of screen when rendering high rez material. (something seem to be wrong with the GPU callbacks)
 - 24-08-2005 changed: when in 1080i, default method interlace handling when in auto is nolonger syncing, but deinterlacing (only affects dvdplayer right now)
 - 24-08-2005 changed: small speedup of interlaced rendering, (less issues in 1080i, still too slow thou)
 - 24-08-2005 fixed: playback in 1080i was a slideshow. (still issues with interlaced rendering thou)
 - 24-08-2005 fixed: dvdplayer would crash or output nonsense name for audiostream if it was nonexisting
 - 24-08-2005 fixed: Share lock - numeric Password: cancel was brocken [ifinite loop] [GeminiServer]
 - 24-08-2005 fixed: Share lock - numeric Password: dialog descriptions was brocken   [GeminiServer]
 - 24-08-2005 fixed: slideshow sometimes showed the wrong second image
 - 23-08-2005 fixed: dvdplayer code cleanup and a fix for incrorrect nr of audio channels being displayed
 - 23-08-2005 changed: dvdplayer is now not allowed to drop more than 15 frames in a row. (makes it display something atleast when very late)
 - 23-08-2005 changed: made fliptime calculation an moving average, to reduce choppyness in dvdplayer