@@ -2,6 +2,7 @@
 #define XBOX_VIDEO_RENDERER
 
 #include "XBoxRenderer.h"
+#include "..\..\utils\SharedSection.h"
 
 class CXBoxRenderManager
 {
@@ -12,61 +13,68 @@ public:
   void ChangeRenderers();
 
   // Functions called from the GUI
-  void GetVideoRect(RECT &rs, RECT &rd) { if (!m_bChanging && m_pRenderer) m_pRenderer->GetVideoRect(rs, rd); };
-  float GetAspectRatio() { if (!m_bChanging && m_pRenderer) return m_pRenderer->GetAspectRatio(); else return 1.0f; };
-  void AutoCrop(bool bCrop = true) { if (!m_bChanging && m_pRenderer) m_pRenderer->AutoCrop(bCrop); };
+  void GetVideoRect(RECT &rs, RECT &rd) { CSharedLock lock(m_sharedSection); if (m_pRenderer) m_pRenderer->GetVideoRect(rs, rd); };
+  float GetAspectRatio() { CSharedLock lock(m_sharedSection); if (m_pRenderer) return m_pRenderer->GetAspectRatio(); else return 1.0f; };
+  void AutoCrop(bool bCrop = true) { CSharedLock lock(m_sharedSection); if (m_pRenderer) m_pRenderer->AutoCrop(bCrop); };
   void Update(bool bPauseDrawing);
-  void RenderUpdate(bool clear) { if (!m_bChanging && m_pRenderer) m_pRenderer->RenderUpdate(clear); };
-  void CheckScreenSaver() { if (!m_bChanging && m_pRenderer) m_pRenderer->CheckScreenSaver(); };
+  void RenderUpdate(bool clear) { CSharedLock lock(m_sharedSection); if (m_pRenderer) m_pRenderer->RenderUpdate(clear); };
+  void CheckScreenSaver() { CSharedLock lock(m_sharedSection); if (m_pRenderer) m_pRenderer->CheckScreenSaver(); };
   void SetupScreenshot();
   void CreateThumbnail(LPDIRECT3DSURFACE8 surface, unsigned int width, unsigned int height);
-  void SetViewMode(int iViewMode) { if (!m_bChanging && m_pRenderer) m_pRenderer->SetViewMode(iViewMode); };
+  void SetViewMode(int iViewMode) { CSharedLock lock(m_sharedSection); if (m_pRenderer) m_pRenderer->SetViewMode(iViewMode); };
 
   // Functions called from mplayer
   inline void WaitForFlip()
   {
-    if (!m_bChanging && m_pRenderer)
+    CSharedLock lock(m_sharedSection);
+    if (m_pRenderer)
       m_pRenderer->WaitForFlip();
   }
   unsigned int Configure(unsigned int width, unsigned int height, unsigned int d_width, unsigned int d_height, float fps);
   inline unsigned int GetImage(YV12Image *image)
   {
+    CSharedLock lock(m_sharedSection);
     if (m_bPauseDrawing) return 0;
-    if (!m_bChanging && m_pRenderer)
+    if (m_pRenderer)
       return m_pRenderer->GetImage(image);
     return 0;
   }
   inline void ReleaseImage()
   {
-    if (!m_bChanging && m_pRenderer)
+    CSharedLock lock(m_sharedSection);
+    if (m_pRenderer)
       m_pRenderer->ReleaseImage();
   }
   inline unsigned int PutImage(YV12Image *image)
   {
+    CSharedLock lock(m_sharedSection);
     if (m_bPauseDrawing) return 0;
-    if (!m_bChanging && m_pRenderer)
+    if (m_pRenderer)
       return m_pRenderer->PutImage(image);
     return 0;
   }
   inline unsigned int DrawFrame(unsigned char *src[])
   {
+    CSharedLock lock(m_sharedSection);
     if (m_bPauseDrawing) return 0;
-    if (!m_bChanging && m_pRenderer)
+    if (m_pRenderer)
       return m_pRenderer->DrawFrame(src);
     return 0;
   }
   inline unsigned int DrawSlice(unsigned char *src[], int stride[], int w, int h, int x, int y)
   {
+    CSharedLock lock(m_sharedSection);
     if (m_bPauseDrawing) return 0;
-    if (!m_bChanging && m_pRenderer)
+    if (m_pRenderer)
       return m_pRenderer->DrawSlice(src, stride, w, h, x, y);
     return 0;
   }
 
   inline void PrepareDisplay()
   {
+    CSharedLock lock(m_sharedSection);
     if (m_bPauseDrawing) return;
-    if (!m_bChanging && m_pRenderer)
+    if (m_pRenderer)
     {
       m_pRenderer->PrepareDisplay();
     }
@@ -74,7 +82,8 @@ public:
 
   inline void FlipPage(bool bAsync = false)
   {
-    if (!m_bChanging && m_pRenderer)
+    CSharedLock lock(m_sharedSection);
+    if (m_pRenderer)
     {
       if (m_bPauseDrawing)
         m_pRenderer->RenderBlank();
@@ -85,7 +94,8 @@ public:
 
   inline int GetAsyncFlipTime()
   {
-    if (!m_bChanging && m_pRenderer)
+    CSharedLock lock(m_sharedSection);
+    if (m_pRenderer)
       return m_pRenderer->GetAsyncFlipTime();
     else
       return 0;
@@ -95,18 +105,20 @@ public:
   void UnInit();
   inline void DrawAlpha(int x0, int y0, int w, int h, unsigned char *src, unsigned char *srca, int stride)
   {
+    CSharedLock lock(m_sharedSection);
     if (m_bPauseDrawing) return ;
-    if (!m_bChanging && m_pRenderer)
+    if (m_pRenderer)
       m_pRenderer->DrawAlpha(x0, y0, w, h, src, srca, stride);
   }
-  inline int GetOSDWidth() { if (!m_bChanging && m_pRenderer) return m_pRenderer->GetNormalDisplayWidth(); else return 0;};
-  inline int GetOSDHeight() { if (!m_bChanging && m_pRenderer) return m_pRenderer->GetNormalDisplayHeight(); else return 0; };
+  inline int GetOSDWidth() { CSharedLock lock(m_sharedSection); if (m_pRenderer) return m_pRenderer->GetNormalDisplayWidth(); else return 0;};
+  inline int GetOSDHeight() { CSharedLock lock(m_sharedSection); if (m_pRenderer) return m_pRenderer->GetNormalDisplayHeight(); else return 0; };
   inline bool Paused() { return m_bPauseDrawing; };
   inline bool IsStarted() { return m_bIsStarted;}
 
   inline void SetFieldSync(EFIELDSYNC mSync) 
   { 
-    if (!m_bChanging && m_pRenderer) 
+    CSharedLock lock(m_sharedSection);
+    if (m_pRenderer) 
       m_pRenderer->SetFieldSync(mSync); 
   } ;
 
@@ -117,8 +129,8 @@ protected:
   unsigned int m_iSourceHeight;   // height
   bool m_bPauseDrawing;   // true if we should pause rendering
 
-  bool m_bChanging;     // true when we are changing renderers
   bool m_bIsStarted;
+  CSharedSection m_sharedSection;
 };
 
 extern CXBoxRenderManager g_renderManager;
